--- a/sample.html
+++ b/sample.html
@@ -7,5 +7,5 @@
     <title>Document</title>
     <link rel="stylesheet" href="sample.css" />
   </head>
-  <body></body>
+  <body>from remote</body>
 </html>
