--- a/sample.html
+++ b/sample.html
@@ -7,5 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="sample.css" />
   </head>
-  <body>from remote2</body>
+  <body>
+    from local
+  </body>
 </html>
