ローカルで編集

--- a/sample.html
+++ b/sample.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="sample.css" />
   </head>
   <body>
-    from local
+    This is local repository.
   </body>
 </html>
