--- a/sample.html
+++ b/sample.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>マイホームページ</title>
     <link rel="stylesheet" href="sample.css" />
   </head>
   <body>
-    This is local repository. This is remote repository.
+    <h3>私のホームページにようこそ</h3>
   </body>
 </html>
